fixed margins on site to stop zommed in screen buttons overlaping text

--- a/css/main.scss
+++ b/css/main.scss
@@ -154,4 +154,10 @@ padding:2px 5px;
 box-shadow: none;
 }
 
+.post{
+margin-left: 2cm;
+}
 
+.site-wrapper{
+margin-left: 1cm;
+}
